Show all option. And thumbnails + better titles

--- a/DRNU4WindowsPhone/index.htm
+++ b/DRNU4WindowsPhone/index.htm
@@ -39,7 +39,7 @@
 
     <div data-role="page" id="videos" data-url="programs" tabindex="0" class="ui-page ui-body-c" style="min-height: 468px; ">
         <div data-role="header" class="ui-header ui-bar-a" role="banner">
-	    	<h1 id="videosTitle" class="ui-title" role="heading" aria-level="1">Two</h1>
+	    	<h1 id="videosTitle" class="ui-title" role="heading" aria-level="1">Videos</h1>
     	</div>
         <div data-role="content" class="ui-content" role="main">
             <ul id="videosList" data-role="listview" data-divider-theme="a" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
